[tool.poetry]
name = "Cloud Native IDE POC"
version = "0.1.0"
description = "An exploration of what a cloud native machine-learning / data science IDE could look like."
authors = ["Mandy Gu <mgu@wealthsimple.com>, Diederik van Liere <dvanliere@gmail.com>"]

[tool.poetry.dependencies]
fastapi = {version = "^0.75.0", extras = ["all"]}
mlflow = "1.26.1"
jsonpickle = "1.2"
boto3 = {version = "^1.21.31", extras = ["s3"]}
psycopg2 = "~2.9.3"
ddtrace = "0.52.1"
datadog = "0.35.0"
rollbar = "0.16.2"
tritonclient = {version = "2.21.0", extras = ["http"]}
Sphinx = "~4.5.0"
sphinx-rtd-theme = "~1.0.0"
slack-sdk = "~3.16.2"
nteract_on_jupyter = "^2.1.3"

[tool.poetry.dev-dependencies]
click = "^8.1.2"
pre-commit = "^2.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.1"
mypy = {version = "^0.942", extras = ["types-requests", "types-pytz", "types-PyYAML"]}
ipython = "^8.2.0"
types-PyYAML = "^6.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
